--- a/usertestingOSM.html
+++ b/usertestingOSM.html
@@ -82,6 +82,8 @@
                     </div>
                     <p class="mb-30"> Online Supermarket (OSM) is a new online grocery shopping service specializing in South Asian products. OSM operates from Squamish and delivers across the Lower Mainland.
                       The goal of the study was to discover potential customers’ perceptions about the OSM website (www.onlinesupermarket.ca). It also evaluated the website’s effectiveness for the process of finding, browsing, and selecting grocery items. Since the website is still in its early stages, a more exploratory approach with emphasis on qualitative findings was chosen for this study.
+                      It was a semester long project for an upper division subject and we ultimately handed OSM a link to the final 
+                      <a href="https://drive.google.com/file/d/19_FecU_3iQZx8PgzpdCb4UIl9GtIsWQg/view?usp=sharing"><b><u>results</u></b></a> along with <a href="https://www.figma.com/proto/uhhKWRjX3PPSnB7SLE4maY/IAT432_FinalProject?node-id=87%3A2"><b><u>prototype</u></b></a>.
                       </p>
                     <h5>Method</h5>
                       <p class="mb-30"> The study examined potential users of OSM, focusing on males and females aged 20-30. Since many members of this age group are comfortable with online shopping, they may be more likely to order groceries from online stores such as OSM. The study was conducted using four different methods: an online survey, a card sorting activity, usability tests, and a post-test questionnaire.
@@ -223,9 +225,9 @@
                     <p class="mb-30">Based on the findings, several design recommendations are discussed below. Refining visual elements can improve the website’s professionalism, which is important for attracting prospective customers as a new company. This includes consistency across the banner images, type, and the scale and spacing of product cards
                         Furthermore, adding customer testimonials would allow users to see what other people have to say about OSM, which would build trust and credibility.
                         </p>
-                    <br><b><u>Additonal Documents</u></b><br>
-                    <a href="https://www.figma.com/proto/uhhKWRjX3PPSnB7SLE4maY/IAT432_FinalProject?node-id=87%3A2">Link to the prototype</a><br>
-                    <a href="https://drive.google.com/drive/folders/15PmwcGYnhTU5O97IL7bqc9p2k90LDSHo">Read about this study in depth</a>
+                    <br><b>Additonal Documents</b><br><br>
+                    <a href="https://www.figma.com/proto/uhhKWRjX3PPSnB7SLE4maY/IAT432_FinalProject?node-id=87%3A2"><u>Link to the prototype</u></a><br><br>
+                    <a href="https://drive.google.com/file/d/19_FecU_3iQZx8PgzpdCb4UIl9GtIsWQg/view?usp=sharing"><u>Read about this study in depth</u></a>
 
                     <em>
                         <!-- <a href="https://drive.google.com/drive/folders/1pY8Ecm7Qb9T_jEu9x2GgRcFf-uu7nYZ7?usp=sharing" target="_blank">Download Project Resources</a> -->
